--- a/snapper/src/static/styles/index.css
+++ b/snapper/src/static/styles/index.css
@@ -11,9 +11,16 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  margin-top: 40px;
   justify-content: center;
 }
 
 body {
   margin: 0;
+}
+
+.output {
+  display: flex;
+  justify-content: center;
+  margin: 40px;
 }
